@@ -16,7 +16,6 @@
 
 package io.flowtree.jobs.agent;
 
-import java.util.Collections;
 import java.util.Set;
 
 /**
@@ -36,6 +35,7 @@ import java.util.Set;
  * @param supportsMcpStdioTransport         whether the runner supports stdio MCP servers
  * @param supportsPermissionDenialReporting whether the runner reports tool-permission denials
  * @param supportedModels                   set of recognised model identifiers; empty means unconstrained
+ * @param supportedProviders                set of recognised provider identifiers; empty means unconstrained
  */
 public record AgentCapabilities(
         boolean reportsCost,
@@ -45,15 +45,43 @@ public record AgentCapabilities(
         boolean supportsMcpHttpTransport,
         boolean supportsMcpStdioTransport,
         boolean supportsPermissionDenialReporting,
-        Set<String> supportedModels) {
+        Set<String> supportedModels,
+        Set<String> supportedProviders) {
 
     /**
-     * Canonical compact constructor that defensively copies the supported-model set
-     * and substitutes an empty set for {@code null}.
+     * Canonical compact constructor that defensively copies the supported-model and
+     * supported-provider sets (via {@link Set#copyOf}), preventing mutation through
+     * the caller's original reference, and substitutes an empty set for {@code null}.
      */
     public AgentCapabilities {
-        supportedModels = supportedModels == null
-                ? Collections.emptySet()
-                : Collections.unmodifiableSet(supportedModels);
+        supportedModels = supportedModels == null ? Set.of() : Set.copyOf(supportedModels);
+        supportedProviders = supportedProviders == null ? Set.of() : Set.copyOf(supportedProviders);
+    }
+
+    /**
+     * Backwards-compatible eight-argument constructor that defaults
+     * {@code supportedProviders} to the empty set. Used by tests and call
+     * sites from before the provider-axis was added.
+     *
+     * @param reportsCost                       whether the runner emits a USD cost figure
+     * @param reportsTurns                      whether the runner emits an agentic-turn count
+     * @param supportsEffortLevel               whether the runner accepts a thinking/effort level
+     * @param supportsMaxBudget                 whether the runner accepts a USD budget cap
+     * @param supportsMcpHttpTransport          whether the runner supports HTTP-transport MCP servers
+     * @param supportsMcpStdioTransport         whether the runner supports stdio MCP servers
+     * @param supportsPermissionDenialReporting whether the runner reports tool-permission denials
+     * @param supportedModels                   set of recognised model identifiers
+     */
+    public AgentCapabilities(boolean reportsCost,
+                             boolean reportsTurns,
+                             boolean supportsEffortLevel,
+                             boolean supportsMaxBudget,
+                             boolean supportsMcpHttpTransport,
+                             boolean supportsMcpStdioTransport,
+                             boolean supportsPermissionDenialReporting,
+                             Set<String> supportedModels) {
+        this(reportsCost, reportsTurns, supportsEffortLevel, supportsMaxBudget,
+                supportsMcpHttpTransport, supportsMcpStdioTransport,
+                supportsPermissionDenialReporting, supportedModels, Set.of());
     }
 }
